logs/nydus.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nydus'...
Listing './lib/python3.5/site-packages/nydus/contrib'...
Compiling './lib/python3.5/site-packages/nydus/contrib/ketama.py'...
***   File "./lib/python3.5/site-packages/nydus/contrib/ketama.py", line 137
    print 'Number of caches on each node: '
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nydus/db'...
Listing './lib/python3.5/site-packages/nydus/db/backends'...
Compiling './lib/python3.5/site-packages/nydus/db/base.py'...
***   File "./lib/python3.5/site-packages/nydus/db/base.py", line 79
    except tuple(conn.retryable_exceptions), e:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nydus/db/routers'...
Listing './lib/python3.5/site-packages/nydus-0.11.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
